log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 10:58:09 AM UTC: 
 tests:  0|6
total_score: 0/70
ae4e701
Wed 29 Mar 2023 10:30:19 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:17: error: ‘*auxArrayList.data’ is used uninitialized [-Werror=uninitialized]
   16 |     auxArrayList->data[0] = (void **) malloc(sizeof(void*) * 2);
      |     ~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
69e05cc
Wed 29 Mar 2023 10:30:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:17: error: ‘*auxArrayList.data’ is used uninitialized [-Werror=uninitialized]
   16 |     auxArrayList->data[0] = NULL;
      |     ~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1595fb1
Wed 29 Mar 2023 10:31:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9cd12b7
Wed 29 Mar 2023 10:31:43 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f060f22
Wed 29 Mar 2023 10:42:26 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
07c52b5
Wed 29 Mar 2023 10:43:47 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
c33c8eb
Wed 29 Mar 2023 10:51:12 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:44:13: error: ‘j’ undeclared (first use in this function)
   44 |     l->data[j] = data;
      |             ^
arraylist.c:44:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
52e98ba
Wed 29 Mar 2023 10:51:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
95d1712
Wed 29 Mar 2023 10:52:13 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
df26ed1
Wed 29 Mar 2023 11:05:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e2edeb2
Wed 29 Mar 2023 11:07:25 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
9eade52
Wed 29 Mar 2023 11:10:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
cdcae56
Wed 29 Mar 2023 11:15:23 PM UTC: 
 arraylist.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|2
total_score: 40/70
85cfe9b
Wed 29 Mar 2023 11:20:22 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:57:14: error: unused variable ‘j’ [-Werror=unused-variable]
   57 |     for (int j = i; i < l->size - 1; i++)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
cd24d9f
Wed 29 Mar 2023 11:20:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
020cfca
Wed 29 Mar 2023 11:21:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
cd06f4b
